Working on documentation

--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -647,7 +647,7 @@ add reg(11), reg(9), reg(0)
 add :rd=>reg(:i=>11), :rs=>reg(:i=>9), :rt=>reg(:i=>0)
 \end{lstlisting}
 
-\paragraph{Aliases} ~\\
+\subsection{Aliases}
 
 Sometimes it is required to define \emph{aliases} for addressing modes or operations
 invoked with certain arguments. This is needed to make a test template more 
@@ -666,7 +666,7 @@ def at
 end
 \end{lstlisting}
 
-\paragraph{Pseudo Instructions} ~\\
+\subsection{Pseudo Instructions}
 
 It is possible to specifify \emph{pseudo instructions} that do not have correspondent
 operation in specifications. Such instructions print user-specified text and do not
