Working on documentation

--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -735,7 +735,7 @@ test templates, the following functions are used:
 
 \begin{itemize}
 \item \texttt{define{\_}mode{\_}group(name, distribution)} - defines an addressing mode\\group;
-\item \texttt{define{\_}op{\_}group(name, distribution)} - defined operation group.
+\item \texttt{define{\_}op{\_}group(name, distribution)} - defined an operation group.
 \end{itemize}
 
 Both function take the \texttt{name} and \texttt{distribution} arguments that specify
