Working on documentation

--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -769,6 +769,9 @@ alu t6, t7, t8
 
 \section{Data}
 
+This section describes how to describe data definitions to be included into test
+programs.
+
 \subsection{Configuration}
 
 Defining data requires the use of assembler-specific directives. Information on
