Working on docs.

--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -366,8 +366,8 @@ and provides special facilities. The language is implemented as a library that
 implements facilities for describing test cases. Detailed information on Ruby
 features can be found in official documentation \cite{ruby-site, ruby-matz}.
 
-MicroTESK uses the JRuby interpreter to process test templates. This allows Ruby libraries
-to interact with other components of MicroTESK written in Java.
+MicroTESK uses the JRuby \cite{jruby-site} interpreter to process test templates.
+This allows Ruby libraries to interact with other components of MicroTESK written in Java.
 
 Test templates are processed in two stages:
 \begin{enumerate}
@@ -954,12 +954,15 @@ M.~Freericks.
 Technical Report TR SM-IMP/DIST/08, TU Berlin CS Department, 1993.
 
 \bibitem{ruby-site}
-\emph{Ruby site} -- http://www.ruby-lang.org
+\emph{Ruby site} -- \url{http://www.ruby-lang.org}
 
 \bibitem{ruby-matz}
 Flanagan D., Matsumoto Y.
 \emph{The Ruby Programming Language}.
 O’Reilly Media, Sebastopol, 2008.
+
+\bibitem{jruby-site}
+\emph{JRuby site} -- \url{http://jruby.org}
 
 \end{thebibliography}
 
