--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,12 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/03/11 MicroTESK 2.3.26 beta
+
+ The new build contains the following changes:
+
+  - Several bug fixes and general improvements
+
 2016/03/04 MicroTESK 2.3.25 beta
 
  The new build contains the following changes:
