--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -25,6 +25,11 @@
 \usepackage{listings}
 \usepackage[dvipsnames]{xcolor}
 
+\definecolor{javared}{rgb}{0.6,0,0}
+\definecolor{javagreen}{rgb}{0.25,0.5,0.35}
+\definecolor{javapurple}{rgb}{0.5,0,0.35}
+\definecolor{javablue}{rgb}{0.25,0.35,0.75}
+
 \lstset{
  language=C,
  frame=single,
@@ -40,9 +45,9 @@
 \lstloadlanguages{Ruby}
 \lstset{
 basicstyle=\ttfamily\footnotesize\color{black},
-commentstyle = \ttfamily\color{green},
-keywordstyle=\bfseries\color{blue},
-stringstyle=\color{blue},
+commentstyle=\ttfamily\color{javagreen},
+keywordstyle=\bfseries\color{javapurple},
+stringstyle=\color{javablue},
 showstringspaces=false,
 basewidth={.48em}
 }
