--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -892,6 +892,8 @@ The \texttt{data} construct has two optional parameters:
       definitions should be placed into a separate source code file.
 \end{itemize}
 
+\subsubsection{Predefined methods}
+
 Here is the list of methods that can be used in \texttt{data} sections:
 
 \begin{itemize}
@@ -911,13 +913,17 @@ Here is the list of methods that can be used in \texttt{data} sections:
 \item \texttt{label} - associates the specified label with the current address.  
 \end{itemize}
 
-Also, here is the list of runtime methods what has been defined by the \texttt{define{\_}type},
-\texttt{define{\_}space} and \texttt{define{\_}ascii{\_}string} methods in the previous example:
+\subsubsection{Configurable methods}
+
+Also, here is the list of runtime methods what has been configured in the \texttt{data{\_}config}
+section in the previous example:
 
 \begin{itemize}
 \item \texttt{space} - increases the allocation address by the number of bytes specified by
       its argument. The allocated space is filled with the value which has been set up by
       the \hyperref[define_space]{\texttt{define{\_}space}} method.
+\item \texttt{byte}, \texttt{half}, \texttt{word}
+\item \texttt{ascii}, \texttt{asciiz}
 \end{itemize}
 
 Here is an example:
