--- a/ChangeLog
+++ b/ChangeLog
@@ -10,10 +10,10 @@
 
  The new build contains the following changes:
 
-  - Test Templates: The "atomic" and "iterate" block types were established;
+  - Test Templates: The "atomic" and "iterate" block types were established
   - Test Templates: The "block" structure now can be used only to combine
-    sequences returned by nested blocks;
-  - Test Templates: The "rearranger" parameter was supported by blocks;
+    sequences returned by nested blocks
+  - Test Templates: The "rearranger" parameter was supported by blocks
 
 2016/03/11 MicroTESK 2.3.26 beta
 
