--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,12 @@
  2015/09/04 MicroTESK 2.3 beta
 --------------------------------------------------------------------------------
 
+2016/04/11 MicroTESK 2.3.30 beta
+
+ The new build contains the following changes:
+
+ - Fixed a bug related to simulation of aligned instruction calls
+
 2016/04/08 MicroTESK 2.3.29 beta
 
  The new build contains the following changes:
