MicroTESK manual updated.

--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -1040,7 +1040,7 @@ prepare t0, 0xDEADBEEF
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Comparators}
+\section{Comparators}
 
 Test programs can include self-checks that check validity of the microprocessor state after
 a test case has been executed. These checks are instruction sequences inserted in the end of
