--- a/xdocs/microtesk/microtesk_user_guide.tex
+++ b/xdocs/microtesk/microtesk_user_guide.tex
@@ -1066,6 +1066,33 @@ comparator(:target => 'REG', :mask => "00000000") {
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section{Exception Handlers}
+
+Test programs can provide handlers of exceptions that occur during their execution.
+Exception handlers are descibed using the {\tt exception{\_}handler} construct.
+This description is also used by the MicroTESK simulator to handle exceptions.
+Separate exception handlers are described using the {\tt section} construct nested into
+the {\tt exception{\_}handler} block. The {\tt section} function has two arguments: {\tt org}
+that specifies the handler's location in memory and {\tt exception} that specifies names of
+associated exceptions. For example, the code below describes a handler for
+the {\tt IntegerOverflow}, {\tt SystemCall} and {\tt Breakpoint} exceptions which resumes
+execution from the next instruction:
+
+\begin{lstlisting}[language=ruby, emph={exception_handler, section}]
+exception_handler {
+  section(:org => 0x380, :exception => ['IntegerOverflow',
+                                        'SystemCall',
+                                        'Breakpoint']) {
+    mfc0 ra, cop0(14)
+    addi ra, ra, 4
+    jr ra 
+    nop
+  }
+}
+\end{lstlisting}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \chapter{Test Engine Branch}
 
 \section{Parameters}
